<resources>
    <string name="app_name">知乎日报</string>
    <string name="user_name_default">请登录</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="my_collect">我的收藏</string>
    <string name="download_news">离线下载</string>
    <string name="home_title">首页</string>
    <string name="home_menu_news_str">消息</string>
    <string name="home_menu_more_str">更多选项</string>
    <string name="home_data_item_default_str">明明所有单词我都熟，可组成一句话……这是个啥？</string>
    <string name="home_time_default_str">今日热闻</string>
    <string name="home_toolbar_title">首页</string>
    <string name="navigation_menu_str_default">日常心理学</string>
    <string name="common_header_text_default">为你发现最有趣的新鲜事，建议在WiFi下查看</string>
    <string name="editor_title_str">主编</string>
    <string name="article_header_title_default">- 连钱都解决不了的问题……\r\n- 用蝙蝠侠解决</string>
    <string name="article_header_resource_default">《蝙蝠侠：侠影之谜》</string>
    <string name="article_start_zhihu_str">查看知乎讨论</string>
    <string name="comment_author_name_default">YES有意思设计</string>
    <string name="comment_content">AI像苹果，CROWDRAW像安卓！\n虽然学Ai那是04年的事（那时还没有苹果手机）；那时感觉全世界都在用CROWDRAW。\nAI有种固执的坚持，比如分页功能、剪切图片功能、图层功能、绝不雷同CROWDRAW，好特别！\n毕竟是PS一个公司出的！好牛掰！\n但我的确是半天就搞懂了它；熟练用了十几天吧！\n如果你用MAC打开来的过程就感觉AI就是有感觉！\n虽然现在一年打开不了几次，但每次打开却像是印在了脑子里，那么熟悉</string>
    <string name="long_comment_str">条长评</string>
    <string name="short_comment_str">条短评</string>
</resources>
