<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ArticleActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/article_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:fitsSystemWindows="true"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/article_header"
        android:visibility="gone">
        <ImageView
            android:id="@+id/article_header_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/article_header_default"
            android:scaleType="center"/>
        <TextView
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/article_header_resource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/article_header_resource_default"
            android:textColor="#FFFFFF"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/article_header_title"
            android:layout_above="@id/article_header_resource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/article_header_title_default"
            android:layout_marginStart="10dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>

    </RelativeLayout>
    <WebView
        android:id="@+id/article_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/article_start_web"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/article_start_zhihu_str"
        android:visibility="gone"/>
</LinearLayout>