<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/user_layout"
        android:gravity="center_vertical"
        android:layout_marginTop="35dp"
        android:layout_marginStart="10dp">
        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/user_icon_default"/>
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_default"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_layout"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/user_collect"
            android:gravity="center">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/collect_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_collect"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:layout_marginStart="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/download_news">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/download_news"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_news"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:layout_marginStart="20dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>